<resources>
    <string name="app_name">MyCalculator1</string>
    <string name="displayText">MyCalculator1</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="Multiply">x</string>
    <string name="Divide">/</string>
    <string name="Decimal">.</string>
    <string name="Equal">=</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Sqrt">Sqrt</string>
    <string name="Clear">C</string>
    <string name="Modulus">%</string>
    <string name="invalidInput">Please provide a valid number input here</string>
</resources>